Added the installation of pytest (missing)

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -40,5 +40,7 @@ jobs:
 
     - name: Generate testcases
       run: |
+        pip install pytest
+        pip install pytest-cov
         python generate_testcases.py
-        pytest testcase_output/
+        pytest testcase_output/ --cov-report=html
