--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9]
+        python-version: [3.9]
 
     steps:
     - uses: actions/checkout@v2
@@ -42,5 +42,6 @@ jobs:
       run: |
         pip install pytest
         # python generate_testcases.py # commented out as it took too long to run
-        python generate_testcases.py simple
+        python generate_testcases.py basic
+        python generate_testcases.py enum_example
         pytest testcase_output/
