--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -42,6 +42,5 @@ jobs:
       run: |
         pip install pytest
         # python generate_testcases.py # commented out as it took too long to run
-        python generate_testcases.py basic
-        python generate_testcases.py enum_example
+        python generate_testcases.py simple
         pytest testcase_output/
