Upgraded test suire
Try to run the whole test suite now the autopep8 is disabled

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -41,6 +41,6 @@ jobs:
     - name: Generate testcases
       run: |
         pip install pytest
-        # python generate_testcases.py # commented out as it took too long to run
-        python generate_testcases.py simple
+        python generate_testcases.py # commented out as it took too long to run
+        # python generate_testcases.py simple
         pytest testcase_output/
