--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -34,13 +34,12 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install .
         python -m pip install pylint
+        python -m pip install pytest
 
     - name: Lint with pylint
       run: pylint --rcfile tests/pylint.rc peakrdl
 
     - name: Generate testcases
       run: |
-        pip install pytest
         python generate_testcases.py # commented out as it took too long to run
-        # python generate_testcases.py simple
         pytest testcase_output/
