attempt to introduce the autopep8 formatted code checking

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -41,5 +41,6 @@ jobs:
 
     - name: Generate testcases
       run: |
-        python generate_testcases.py # commented out as it took too long to run
-        pytest testcase_output/
+        python generate_testcases.py
+        pytest testcase_output/raw
+        pytest testcase_output/autopep8
