--- a/tests/pylint.rc
+++ b/tests/pylint.rc
@@ -157,7 +157,8 @@ disable=print-statement,
         #additional items for this library
         fixme,
         import-error,
-        no-name-in-module
+        no-name-in-module,
+        duplicate-code
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
