Added mypy back to the github actions

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -40,8 +40,8 @@ jobs:
     - name: Lint with pylint
       run: pylint --rcfile tests/pylint.rc peakrdl_python
 
-    # - name: Typing check with mypy
-    #   run: mypy src/peakrdl_python --config-file=tests/.mypy.ini
+    - name: Typing check with mypy
+      run: mypy src/peakrdl_python --config-file=tests/.mypy.ini
 
     - name: Generate testcases
       run: |
