--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -50,3 +50,14 @@ jobs:
         # mypy testcase_output/autopep8 --config-file=tests/.mypy.ini
         pytest testcase_output/raw
         pytest testcase_output/autopep8
+
+    - name: Run PeakRDL Case
+      run: |
+        python -m pip install peakrdl
+
+        peakrdl python tests/testcases/basic.rdl -o peakrdl_out/raw/
+        peakrdl python tests/testcases/simple.xml tests/testcases/multifile.rdl -o peakrdl_out/raw
+        pytest peakrdl_out/raw
+        peakrdl python tests/testcases/basic.rdl -o peakrdl_out/autopep8/ --autoformat
+        pytest peakrdl_out/autopep8
+
