--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -15,7 +15,40 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  python:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -U pylint
+
+      - name: Run Lint
+        run: pylint --rcfile tests/pylint.rc src/peakrdl_python
+
+  mypy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -U mypy
+      - name: Type Check
+        run: mypy src/peakrdl_python --config-file=tests/.mypy.ini
+
+  tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -33,15 +66,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install .
-        python -m pip install pylint
+
         python -m pip install pytest
-        python -m pip install mypy
-
-    - name: Lint with pylint
-      run: pylint --rcfile tests/pylint.rc peakrdl_python
-
-    - name: Typing check with mypy
-      run: mypy src/peakrdl_python --config-file=tests/.mypy.ini
 
     - name: Generate testcases
       run: |
