--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -27,6 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          python -m pip install .
           python -m pip install -U pylint
 
       - name: Run Lint
@@ -44,6 +45,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          python -m pip install .
           python -m pip install -U mypy
       - name: Type Check
         run: mypy src/peakrdl_python --config-file=tests/.mypy.ini
