--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -77,6 +77,7 @@ jobs:
       run: |
         python generate_testcases.py
         mypy testcase_output/raw --config-file=tests/.mypy.ini
+        # autopep8 is moving some of the #ignore statements around so it no longer passes mypy
         # mypy testcase_output/autopep8 --config-file=tests/.mypy.ini
         pytest testcase_output/raw
         pytest testcase_output/autopep8
