--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -92,3 +92,22 @@ jobs:
         peakrdl python tests/testcases/basic.rdl -o peakrdl_out/autopep8/ --autoformat
         pytest peakrdl_out/autopep8
 
+    - name: Check Examples
+        run: |
+          python -m pip install peakrdl
+
+          # build the libraries for the two cases
+          cd example/tranversing_address_map/
+          peakrdl python chip_with_registers.rdl -o .
+          python -m reseting_registers.py
+          python -m dumping_register_state_to_json_file
+
+          cd ../..
+
+          cd example/simulating_callbacks
+
+          peakrdl python chip_with_a_GPIO.rdl -o .
+          python -m flashing_the_LED
+
+          cd ../..
+
