Add a dependency on running lint and mypy before tests

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -53,6 +53,9 @@ jobs:
         run: mypy src/peakrdl_python --config-file=tests/.mypy.ini
 
   tests:
+    needs:
+      - mypy
+      - lint
     runs-on: ubuntu-latest
     strategy:
       matrix:
