--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -11,6 +11,9 @@ on:
     branches: [ main ]
   schedule:
     - cron: '00 6 1 * *'
+  release:
+    types:
+      - published
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -99,3 +102,45 @@ jobs:
         peakrdl python tests/testcases/basic.rdl -o peakrdl_out/autopep8/ --autoformat
         pytest peakrdl_out/autopep8
 
+    #-------------------------------------------------------------------------------
+    build_sdist:
+      needs:
+        - tests
+        - lint
+        - mypy
+      name: Build source distribution
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2
+
+        - uses: actions/setup-python@v2
+          name: Install Python
+          with:
+            python-version: 3.8
+
+        - name: Build sdist
+          run: python setup.py sdist
+
+        - uses: actions/upload-artifact@v2
+          with:
+            path: dist/*.tar.gz
+
+    #-------------------------------------------------------------------------------
+    deploy:
+      needs:
+        - build_sdist
+
+      runs-on: ubuntu-latest
+
+      # Only publish when a GitHub Release is created.
+      if: github.event_name == 'release'
+      steps:
+        - uses: actions/download-artifact@v2
+          with:
+            name: artifact
+            path: dist
+
+        - uses: pypa/gh-action-pypi-publish@master
+          with:
+            user: __token__
+            password: ${{ secrets.PYPI_API_TOKEN }}
