--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -95,7 +95,7 @@ jobs:
 
     - name: Backward Compatibility Test
       run: |
-        python -m tests/test_backward_compatibility
+        python tests/test_backward_compatibility.py
 
     - name: Run PeakRDL Case
       run: |
