--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -107,6 +107,8 @@ jobs:
         peakrdl python tests/testcases/basic.rdl -o peakrdl_out/autopep8/ --autoformat
         pytest peakrdl_out/autopep8
 
+        peakrdl python tests/testcases/basic.rdl -o peakrdl_out/no_test/ --skip_test_case_generation
+
     - name: Check Examples
       run: |
         python -m pip install peakrdl
