--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -35,8 +35,8 @@ jobs:
           python -m pip install .
           python -m pip install -U pylint
 
-      - name: Run Lint
-        run: pylint --rcfile tests/pylint.rc src/peakrdl_python
+      # - name: Run Lint
+      #  run: pylint --rcfile tests/pylint.rc src/peakrdl_python
 
   mypy:
     runs-on: ubuntu-latest
@@ -52,8 +52,8 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install .
           python -m pip install -U mypy
-      - name: Type Check
-        run: mypy src/peakrdl_python --config-file=tests/.mypy.ini
+      #- name: Type Check
+      #  run: mypy src/peakrdl_python --config-file=tests/.mypy.ini
 
   tests:
     needs:
