Fix some more typing problems

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -86,7 +86,7 @@ jobs:
         # retrieve the example code from the systemRDL compiler
         wget -L https://raw.githubusercontent.com/SystemRDL/systemrdl-compiler/main/examples/accelera-generic_example.rdl -O tests/testcases/accelera-generic_example.rdl
         python generate_testcases.py
-        mypy testcase_output/raw --config-file=tests/.mypy.ini
+        mypy testcase_output --config-file=tests/.mypy.ini
         mypy testcase_output/raw_async --config-file=tests/.mypy.ini
         # autopep8 is moving some of the #ignore statements around so it no longer passes mypy
         # mypy testcase_output/autopep8 --config-file=tests/.mypy.ini
