--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -90,6 +90,13 @@ jobs:
 
         python -m unittest discover -s testcase_output
 
+    - name: Test Autoformating
+      run: |
+        python -m pip install black
+        cp ./test_case_output ./autoformatted_test_case_output
+        black autoformatted_test_case_output --line-length 120
+        python -m unittest discover -s autoformatted_test_case_output
+
     - name: Run PeakRDL Case
       run: |
         python -m pip install peakrdl
