Added some unit tests around the array so that some specific aspects were easier to test

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -79,6 +79,9 @@ jobs:
 
         python -m pip install mypy
 
+    - name: Run Unit Tests
+      run: |
+        python -m unittest discover -s tests/unit_tests
 
     - name: Generate testcases
       run: |
