--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -93,7 +93,7 @@ jobs:
     - name: Test Autoformating
       run: |
         python -m pip install black
-        cp ./test_case_output ./autoformatted_test_case_output
+        cp test_case_output autoformatted_test_case_output -f
         black autoformatted_test_case_output --line-length 120
         python -m unittest discover -s autoformatted_test_case_output
 
