--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -93,9 +93,9 @@ jobs:
     - name: Test Autoformating
       run: |
         python -m pip install black
-        cp test_case_output autoformatted_test_case_output -f
+        cp testcase_output autoformatted_testcase_output -r
         black autoformatted_test_case_output --line-length 120
-        python -m unittest discover -s autoformatted_test_case_output
+        python -m unittest discover -s autoformatted_testcase_output
 
     - name: Run PeakRDL Case
       run: |
