--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,8 +1,4 @@
 sphinx-argparse
 pygments-systemrdl
-systemrdl-compiler>=1.21.0
-autopep8
-pylint
-coverage
-jinja2
-peakrdl-ipxact
+peakrdl-python
+sphinx_rtd_theme
