--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -36,7 +36,7 @@ jobs:
           python -m pip install -U pylint
 
       - name: Run Lint
-        run: pylint --rcfile tests/pylint.rc src/peakrdl_python
+        run: pylint --rcfile tests/pylint.rc src/peakrdl_python tests/unit_tests
 
   mypy:
     runs-on: ubuntu-latest
@@ -53,12 +53,34 @@ jobs:
           python -m pip install .
           python -m pip install -U mypy
       - name: Type Check
-        run: mypy src/peakrdl_python --config-file=tests/.mypy.ini
+        run: mypy src/peakrdl_python tests/unit_tests --config-file=tests/.mypy.ini
+
+  unit_tests:
+    needs:
+      - mypy
+      - lint
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ 3.7, 3.8, 3.9, "3.10", "3.11", "3.12" ]
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Run Unit Tests
+        run: |
+          python -m unittest discover -s tests/unit_tests
 
   tests:
     needs:
       - mypy
       - lint
+      - unit_tests
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -76,11 +98,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install .
-
-
-    - name: Run Unit Tests
-      run: |
-        python -m unittest discover -s tests/unit_tests
 
     - name: Generate testcases
       run: |
