--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -80,7 +80,7 @@ jobs:
 
     - name: Run Unit Tests
       run: |
-        python -m unittest discover -s tests/unit_tests
+        python -m unittest discover -s tests/unit_tests -t .
 
     - name: Generate testcases
       run: |
