--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ requires-python = ">=3.7"
 dependencies = [
     "systemrdl-compiler>=1.24.0",
     "jinja2",
-    "asynctest;python_version<'3.8'"
+    "asynctest;python_version<'3.8'",
+    "typing-extensions;python_version<'3.11'"
 ]
 
 authors = [
@@ -19,7 +20,7 @@ description = "Generate python wrapper for a register model compiled SystemRDL i
 readme = "README.md"
 license = {file = "LICENSE"}
 keywords = [
-    "SystmRDL", "PeakRDL", "CSR", "compiler", "tool", "registers", "generator",
+    "SystemRDL", "PeakRDL", "CSR", "compiler", "tool", "registers", "generator",
     "Python"
 ]
 classifiers = [
