--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -154,7 +154,8 @@ jobs:
 
         cd example/enumerated_fields/
         peakrdl python enumerated_fields.rdl -o .
-        python -m enumerated_fields
+        python -m demo_enumerated_fields.py
+
 
         cd ../..
 
