--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -87,12 +87,11 @@ jobs:
         python -m unittest discover -s tests/unit_tests -t .
 
     - name: Test Development Runner
-      - run: |
+      run: |
           python -m generate_and_test --RDL_source_file tests/testcases/simulator_test.rdl --root_node simulator_test
           python -m generate_and_test --RDL_source_file tests/testcases/simulator_test.rdl --root_node simulator_test --async
 
           python -m generate_and_test --RDL_source_file tests/testcases/accelera-generic_example.rdl --root_node simulator_test
-
 
     - name: Generate testcases
       run: |
