--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -56,6 +56,44 @@ jobs:
       - name: Type Check
         run: mypy src/peakrdl_python --config-file=tests/.mypy.ini
 
+  dev_runner:
+    needs:
+      - mypy
+      - lint
+
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ 3.7, 3.8, 3.9, "3.10", "3.11", "3.12" ]
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install .
+          # the generate_and_test script is intended to run directly from source rather than from
+          # the installed package
+          python -m pip uninstall peakrdl-python -y
+
+          # retrieve the example code from the systemRDL compiler
+          wget -L https://raw.githubusercontent.com/SystemRDL/systemrdl-compiler/main/examples/accelera-generic_example.rdl -O tests/testcases/accelera-generic_example.rdl
+
+      - name: Test Development Runner
+        run: |
+          python -m pip install coverage
+
+          python -m generate_and_test --RDL_source_file tests/testcases/simulator_test.rdl --root_node simulator_test
+          python -m generate_and_test --RDL_source_file tests/testcases/simulator_test.rdl --root_node simulator_test --async
+
+          python -m generate_and_test --RDL_source_file tests/testcases/accelera-generic_example.rdl --root_node simulator_test
+
   tests:
     needs:
       - mypy
@@ -168,20 +206,13 @@ jobs:
 
         cd ../..
 
-    - name: Test Development Runner
-      run: |
-        python -m pip install coverage
-
-        python -m generate_and_test --RDL_source_file tests/testcases/simulator_test.rdl --root_node simulator_test
-        python -m generate_and_test --RDL_source_file tests/testcases/simulator_test.rdl --root_node simulator_test --async
-
-        python -m generate_and_test --RDL_source_file tests/testcases/accelera-generic_example.rdl --root_node simulator_test
   #-------------------------------------------------------------------------------
   build:
     needs:
       - tests
       - lint
       - mypy
+      - dev_runner
     name: Build source distribution
     runs-on: ubuntu-latest
     steps:
