--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -98,6 +98,89 @@ jobs:
 
           python -m generate_and_test --RDL_source_file tests/testcases/accelera-generic_example.rdl --root_node simulator_test
 
+  peakrdl_integration:
+    needs:
+      - mypy
+      - lint
+
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ 3.7, 3.8, 3.9, "3.10", "3.11", "3.12" ]
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install .
+          python -m pip install peakrdl
+
+      - name: Run PeakRDL Case
+        run: |
+
+          peakrdl python tests/testcases/basic.rdl -o peakrdl_out/raw/
+          peakrdl python tests/testcases/simple.xml tests/testcases/multifile.rdl -o peakrdl_out/raw
+          python -m unittest discover -s peakrdl_out/raw
+          peakrdl python tests/testcases/basic.rdl -o peakrdl_out/raw_async/ --async
+          python -m unittest discover -s peakrdl_out/raw_async
+
+          peakrdl python tests/testcases/basic.rdl -o peakrdl_out/no_test/ --skip_test_case_generation
+
+      - name: Check Examples
+        run: |
+
+          # build the libraries for the two cases
+          cd example/tranversing_address_map/
+          peakrdl python chip_with_registers.rdl -o .
+          python -m reseting_registers
+          python -m dumping_register_state_to_json_file
+          python -m writing_register_state_from_json_file
+
+          cd ../..
+
+          cd example/simulating_callbacks
+
+          peakrdl python chip_with_a_GPIO.rdl -o .
+          # this example creates a gui that stays up for ever so needs changing before it can be
+          # in the test suite
+          # python -m flashing_the_LED
+
+          cd ../..
+
+          cd example/optimised_access/
+          peakrdl python optimised_access.rdl -o .
+          python -m demo_optimised_access
+
+          cd ../..
+
+          cd example/array_access/
+          peakrdl python array_access.rdl -o .
+          python -m demo_array_access
+
+          cd ../..
+
+          cd example/enumerated_fields/
+          peakrdl python enumerated_fields.rdl -o .
+          python -m demo_enumerated_fields
+
+
+          cd ../..
+
+          cd example/why_ral/
+          peakrdl python gpio.rdl -o .
+          python -m without_ral
+          python -m with_ral
+          python -m with_hal
+
+          cd ../..
+
   tests:
     needs:
       - mypy
@@ -149,66 +232,7 @@ jobs:
         black autoformatted_testcase_output --line-length 120
         python -m unittest discover -s autoformatted_testcase_output
 
-    - name: Run PeakRDL Case
-      run: |
-        python -m pip install peakrdl
 
-        peakrdl python tests/testcases/basic.rdl -o peakrdl_out/raw/
-        peakrdl python tests/testcases/simple.xml tests/testcases/multifile.rdl -o peakrdl_out/raw
-        python -m unittest discover -s peakrdl_out/raw
-        peakrdl python tests/testcases/basic.rdl -o peakrdl_out/raw_async/ --async
-        python -m unittest discover -s peakrdl_out/raw_async
-
-        peakrdl python tests/testcases/basic.rdl -o peakrdl_out/no_test/ --skip_test_case_generation
-
-    - name: Check Examples
-      run: |
-        python -m pip install peakrdl
-
-        # build the libraries for the two cases
-        cd example/tranversing_address_map/
-        peakrdl python chip_with_registers.rdl -o .
-        python -m reseting_registers
-        python -m dumping_register_state_to_json_file
-        python -m writing_register_state_from_json_file
-
-        cd ../..
-
-        cd example/simulating_callbacks
-
-        peakrdl python chip_with_a_GPIO.rdl -o .
-        # this example creates a gui that stays up for ever so needs changing before it can be
-        # in the test suite
-        # python -m flashing_the_LED
-
-        cd ../..
-
-        cd example/optimised_access/
-        peakrdl python optimised_access.rdl -o .
-        python -m demo_optimised_access
-
-        cd ../..
-
-        cd example/array_access/
-        peakrdl python array_access.rdl -o .
-        python -m demo_array_access
-
-        cd ../..
-
-        cd example/enumerated_fields/
-        peakrdl python enumerated_fields.rdl -o .
-        python -m demo_enumerated_fields
-
-
-        cd ../..
-
-        cd example/why_ral/
-        peakrdl python gpio.rdl -o .
-        python -m without_ral
-        python -m with_ral
-        python -m with_hal
-
-        cd ../..
 
   #-------------------------------------------------------------------------------
   build:
@@ -217,6 +241,7 @@ jobs:
       - lint
       - mypy
       - dev_runner
+      - peakrdl_integration
     name: Build source distribution
     runs-on: ubuntu-latest
     steps:
