--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -124,7 +124,7 @@ jobs:
           python -m generate_and_test --RDL_source_file tests/testcases/simulator_test.rdl --root_node simulator_test
           python -m generate_and_test --RDL_source_file tests/testcases/simulator_test.rdl --root_node simulator_test --async
 
-          python -m generate_and_test --RDL_source_file tests/testcases/accelera-generic_example.rdl --root_node simulator_test
+          python -m generate_and_test --RDL_source_file tests/testcases/accelera-generic_example.rdl --root_node some_register_map
 
   peakrdl_integration:
     needs:
