Fix bug from renaming tests to integration_tests

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -261,9 +261,7 @@ jobs:
   #-------------------------------------------------------------------------------
   build:
     needs:
-      - tests
-      - lint
-      - mypy
+      - integration_tests
       - dev_runner
       - peakrdl_integration
     name: Build source distribution
