--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -251,12 +251,47 @@ jobs:
 
         python -m unittest discover -s testcase_output
 
+  autoformating:
+    needs:
+      - integration_tests
+
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        # reduced matrix because the autoformatter was having issues with python 3.8 so we will
+        # limit this to modern versions of python only
+        python-version: ["3.10", "3.11", "3.12"]
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install .
+        python -m pip install mypy
+        # one of the test cases uses IPxact so we need the importer
+        python -m pip install peakrdl-ipxact
+
+        # retrieve the example code from the systemRDL compiler
+        wget -L https://raw.githubusercontent.com/SystemRDL/systemrdl-compiler/main/examples/accelera-generic_example.rdl -O tests/testcases/accelera-generic_example.rdl
+
+    - name: Generate testcases
+      run: |
+        python generate_testcases.py
+        # no need to check them as they are tested in the previous test
+
     - name: Test Autoformating
       run: |
         python -m pip install black
-        cp testcase_output autoformatted_testcase_output -r
-        black autoformatted_testcase_output --line-length 120
-        python -m unittest discover -s autoformatted_testcase_output
+        black testcase_output --line-length 120
+        mypy testcase_output --config-file=tests/.mypy.ini
+        python -m unittest discover -s testcase_output
 
   #-------------------------------------------------------------------------------
   build:
