Fixed YAML dependency

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -297,6 +297,7 @@ jobs:
   build:
     needs:
       - integration_tests
+      - autoformating
       - dev_runner
       - peakrdl_integration
     name: Build source distribution
