--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -277,21 +277,26 @@ jobs:
         python -m pip install mypy
         # one of the test cases uses IPxact so we need the importer
         python -m pip install peakrdl-ipxact
+        # black is the autoformatter used for this this testing
+        python -m pip install black
 
         # retrieve the example code from the systemRDL compiler
         wget -L https://raw.githubusercontent.com/SystemRDL/systemrdl-compiler/main/examples/accelera-generic_example.rdl -O tests/testcases/accelera-generic_example.rdl
 
     - name: Generate testcases
       run: |
-        python generate_testcases.py
+        # black will ignore files in the .gitingore by default, so we need to ensure that the
+        # content is generated with a different name
+        python generate_testcases.py --output autoformatted_output
         # no need to check them as they are tested in the previous test
 
     - name: Test Autoformating
       run: |
-        python -m pip install black
-        black testcase_output --line-length 120
-        mypy testcase_output --config-file=tests/.mypy.ini
-        python -m unittest discover -s testcase_output
+        # run the autoformatting
+        black autoformatted_output --line-length 120
+        # check the files are correct with mypy and unittesting
+        mypy autoformatted_output --config-file=tests/.mypy.ini
+        python -m unittest discover -s autoformatted_output
 
   #-------------------------------------------------------------------------------
   build:
