--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -260,7 +260,7 @@ jobs:
       matrix:
         # reduced matrix because the autoformatter was having issues with python 3.8 so we will
         # limit this to modern versions of python only
-        python-version: ["3.10", "3.11", "3.12"]
+        python-version: [3.7, 3.8, 3.9, "3.10", "3.11", "3.12"]
 
     steps:
     - uses: actions/checkout@v4
@@ -287,7 +287,7 @@ jobs:
       run: |
         # black will ignore files in the .gitingore by default, so we need to ensure that the
         # content is generated with a different name
-        python generate_testcases.py --output autoformatted_output
+        python generate_testcases.py --output autoformatted_output --test_case accelera-generic_example.rdl
         # no need to check them as they are tested in the previous test
 
     - name: Test Autoformating
