Remove 3.7 from the auto formatting list as it is too painful to make it work with the call backs and not wrapping lines

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -260,7 +260,7 @@ jobs:
       matrix:
         # reduced matrix because the autoformatter was having issues with python 3.8 so we will
         # limit this to modern versions of python only
-        python-version: [3.7, 3.8, 3.9, "3.10", "3.11", "3.12"]
+        python-version: [3.8, 3.9, "3.10", "3.11", "3.12"]
 
     steps:
     - uses: actions/checkout@v4
