--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -8,7 +8,9 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ main ]
+    branches:
+    - main
+    - 0.9.0
   schedule:
     - cron: '00 6 1 * *'
   release:
