Add a build of peakrdl with a toml file and cross check on it

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -183,6 +183,15 @@ jobs:
 
           peakrdl python tests/testcases/basic.rdl -o peakrdl_out/no_test/ --skip_test_case_generation
 
+          # test a TOMl file that passes in overridden templates
+          peakrdl python tests/testcases/basic.rdl -o peakrdl_out/simple_user_template/ --peakrdl-cfg tests/alternative_templates_toml/peakrdl.toml
+          python tests/alternative_templates_toml/header_check.py --generated_package_location peakrdl_out/simple_user_template/ --top_name basic
+          peakrdl python tests/testcases/basic.rdl -o peakrdl_out/dynamic_user_template/ --peakrdl-cfg tests/alternative_templates_dynamic_toml/peakrdl.toml
+          python tests/alternative_templates_dynamic_toml/header_check.py --generated_package_location peakrdl_out/dynamic_user_template/ --top_name basic
+
+
+
+
       - name: Check Examples
         run: |
 
