--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -333,12 +333,35 @@ jobs:
         python -m unittest discover -s autoformatted_output
 
   #-------------------------------------------------------------------------------
+  documentation:
+    needs:
+      # the documentation relies on examples so these must be prechecked
+      # as part of the dependency
+      - peakrdl_integration
+    name: Build the sphinx documentation
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install .
+      # Standard drop-in approach that should work for most people.
+      - uses: ammaraskar/sphinx-action@master
+        with:
+          docs-folder: "docs/"
+      # Create an artifact of the html output.
+      - uses: actions/upload-artifact@v1
+        with:
+          name: DocumentationHTML
+          path: docs/_build/html/
+  #-------------------------------------------------------------------------------
   build:
     needs:
       - integration_tests
       - autoformating
       - dev_runner
-      - peakrdl_integration
+      - documentation
     name: Build source distribution
     runs-on: ubuntu-latest
     steps:
@@ -363,29 +386,9 @@ jobs:
             dist/*.whl
 
   #-------------------------------------------------------------------------------
-  documentation:
-    needs:
-      # the documentation relies on examples so these must be prechecked
-      # as part of the dependency
-      - peakrdl_integration
-    name: Build the sphinx documentation
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      # Standard drop-in approach that should work for most people.
-      - uses: ammaraskar/sphinx-action@master
-        with:
-          docs-folder: "docs/"
-      # Create an artifact of the html output.
-      - uses: actions/upload-artifact@v1
-        with:
-          name: DocumentationHTML
-          path: docs/_build/html/
-  #-------------------------------------------------------------------------------
   deploy:
     needs:
       - build
-      - documentation
 
     runs-on: ubuntu-latest
 
