--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,4 @@
 recursive-include src/peakrdl_python/templates *
+include src/peakrdl_python/py.typed
+include src/peakrdl_python/lib/py.typed
+include src/peakrdl_python/sim_lib/py.typed
